service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiap-app
spec:
  selector:
    app: fiap-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
